--- a/css/index.css
+++ b/css/index.css
@@ -1,6 +1,17 @@
 
 body{
-    background-color: #fff;
+    background-color: #F7F7F7;
+}
+
+.logonav{
+    width: 100px;
+}
+
+nav{
+    display: flex;
+    justify-content: space-between;
+    padding-inline: 100px;
+    align-items: center;
 }
 
 nav ul{
@@ -13,21 +24,35 @@ nav ul{
 
 .navbtn{
     text-decoration: none;
-    background-color: rgb(189, 139, 236);
+    background-color: #00457E;
     border-radius: 10px;
-    color: #020202;
+    color: #F7F7F7;
     padding: 10px;
     display:block;
+    box-shadow: 1px 1px 2px gray;
+    text-transform: uppercase;
+    cursor: pointer;
+}
+
+.navbtn:hover{
+    opacity: 0.8;
+}
+
+main{
+    display: flex;
+    justify-content: center;
+    flex-direction: column;
 }
 
 #home{
     height: 100vh;
-    width: 100%;
+    width: 95%;
     display: flex;
-    justify-content:space-around;
-    align-items: center;
+    justify-content: space-around;
+    align-items:flex-end;
     padding: 30px;
     flex-wrap: wrap-reverse;
+    overflow: hidden;
 }
 
 #home img{
@@ -38,7 +63,7 @@ nav ul{
 }
 
 #home article{
-    width: 70%;
+    width: 50%;
     text-align: center;
 }
 
@@ -48,14 +73,18 @@ h1{
 
 h2{
     font-size: 2.1rem;
-}
+    color:#00457E;
+    text-shadow: 1px 1px 2px gray;}
 h3{
     font-size: 1.7rem;
+    color:#00457E;
+    text-shadow: 1px 1px 2px gray;
 }
 
 .home-title{
     text-transform: uppercase;
-    color:#724dc9;
+    color:#00457E;
+    text-shadow: 1px 1px 2px gray;
 }
 
 .home-subtitle{
@@ -75,7 +104,11 @@ h3{
     flex-wrap: wrap;
     max-width: 80%;
     justify-content: center;
-    
+    background-color: #e7e7e7;
+    border-radius: 25px;
+    box-shadow: 1px 1px 4px black;
+    padding: 15px;
+    overflow: hidden;    
 }
 
 .btn-number{
@@ -87,6 +120,20 @@ h3{
     font-size: 1.5em;
     font-weight: bold;
     transition: 0.2s;
+}
+
+.infobtn{
+    width: 70%;
+    margin-bottom: 40px;
+    line-height: 33px;
+    font-size: 1.1em;
+    text-align: center;
+}
+
+.descbtn{
+    padding: 5px;
+    font-weight: bold;
+    border-radius: 10px;
 }
 
 .available{
@@ -124,19 +171,24 @@ h3{
 }
 
 .gicard{
-    background-color: #dadada;
+    background-color: #e7e7e7;
     width: 80%;
     border-radius: 25px;
     box-shadow: 1px 1px 4px black;
-    padding: 15px;
+    padding-block: 20px;
     display: flex;
-    justify-content: space-between;
+    justify-content: space-around;
+    overflow: hidden;
+    flex-wrap: wrap;
+}
 
+.gc2{
+    flex-wrap: wrap-reverse !important;
 }
 
 .imggirf {
-    width: 80vw;
-    height: 80vw;
+    width: 20vw;
+    height: 20vw;
     max-width: 350px; 
     max-height: 350px;
     border-radius: 25px;
@@ -145,12 +197,31 @@ h3{
 }
 
 .textgirf{
-    width: 100%;
+    width: 60%;
     text-align: center;
+    display: flex;
+    justify-content: center;
+    flex-direction: column;
+}
+
+.descpremio{
+    font-size: 1.5em;
 }
 
 footer{
-    text-align: center;
-    font-size: 1.5rem;
+    padding-top: 20px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 100%;
+    color: #00457E;
+    flex-direction: column;
+    gap: 5px;
+}
+
+.iconfooter{
+    width: 25px;
+    height: 25px;
+    margin-inline: 10px;
 }
 
