--- a/css/index.css
+++ b/css/index.css
@@ -1,4 +1,3 @@
-
 body{
     background-color: #F7F7F7;
 }
@@ -12,6 +11,8 @@ nav{
     justify-content: space-between;
     padding-inline: 100px;
     align-items: center;
+    position: absolute;
+    width: 90%;
 }
 
 nav ul{
@@ -38,6 +39,21 @@ nav ul{
     opacity: 0.8;
 }
 
+.buybtn{
+    background-color: #00457E;
+    border-radius: 10px;
+    color: #F7F7F7;
+    padding: 10px;
+    box-shadow: 1px 1px 2px gray;
+    text-transform: uppercase;
+    cursor: pointer;
+    font-size: 1.3em;
+}
+
+.buybtn:hover{
+    opacity: 0.8;
+}
+
 main{
     display: flex;
     justify-content: center;
@@ -49,7 +65,7 @@ main{
     width: 95%;
     display: flex;
     justify-content: space-around;
-    align-items:flex-end;
+    align-items:center;
     padding: 30px;
     flex-wrap: wrap-reverse;
     overflow: hidden;
@@ -65,6 +81,9 @@ main{
 #home article{
     width: 50%;
     text-align: center;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
 }
 
 h1{
@@ -126,7 +145,7 @@ h3{
     width: 70%;
     margin-bottom: 40px;
     line-height: 33px;
-    font-size: 1.1em;
+    font-size: 1.4em;
     text-align: center;
 }
 
@@ -208,8 +227,28 @@ h3{
     font-size: 1.5em;
 }
 
+.agradecimiento{
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    text-align: center;
+}
+
+.esthetichouse-ty{
+    display: flex;
+    flex-direction: row;
+    justify-content: space-evenly;
+    flex-wrap: wrap;
+}
+
+.ty{
+    width: 40%;
+    font-size: 1.5em;
+}
+
 footer{
     padding-top: 20px;
+    margin-top: 30px;
     display: flex;
     justify-content: center;
     align-items: center;
