--- a/css/index.css
+++ b/css/index.css
@@ -11,8 +11,10 @@ nav{
     justify-content: space-between;
     padding-inline: 100px;
     align-items: center;
-    position: absolute;
+    position: fixed;
     width: 90%;
+    background-color: rgba(247,247,247,0.7);
+    margin-top: -10px;
 }
 
 nav ul{
@@ -118,6 +120,17 @@ h3{
     align-items: center;
 }
 
+#countdown{
+    font-size: 5em;
+    text-transform: uppercase;
+    color:#00457E;
+    text-shadow: 1px 1px 2px gray;
+    border: 1px solid gray;
+    padding: 30px;
+    border-radius: 25px;
+    background-color:#00457e4b;
+}
+
 .content-rifa{
     display: flex;
     flex-wrap: wrap;
@@ -169,6 +182,10 @@ h3{
 }
 
 .reserved{
+    background-color: #ac659cb9;
+}
+
+.pending{
     background-color: #9cbdfa;
 }
 
@@ -187,6 +204,14 @@ h3{
     align-items: center;
     flex-direction: column;
     gap: 25px;
+}
+
+.trasnalias{
+    color: #00457E;
+    max-width: 500px;
+    text-align: center;
+    font-size: 1.2em;
+    margin-block: 60px;
 }
 
 .gicard{
@@ -239,6 +264,7 @@ h3{
     flex-direction: row;
     justify-content: space-evenly;
     flex-wrap: wrap;
+    align-items: center;
 }
 
 .ty{
