Se estiliza formulario de reserva, se agrega logica de mensajes de respuesta, se adapta back, se agrega .gitignore y se agrega componentes de twilio

--- a/css/index.css
+++ b/css/index.css
@@ -120,7 +120,7 @@ h3{
     align-items: center;
 }
 
-#countdown{
+.countdown{
     font-size: 5em;
     text-transform: uppercase;
     color:#00457E;
@@ -288,5 +288,91 @@ footer{
     width: 25px;
     height: 25px;
     margin-inline: 10px;
+}
+.modalwindow{
+    display: flex;
+    flex-direction: column;
+    gap: 10px;
+    background-color: #e7e7e7;
+    border-radius: 25px;
+    box-shadow: 1px 1px 4px #00457E;
+    padding: 20px;
+    max-width: 500px;
+    min-width: 300px;
+}
+.modalreserved{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    position: fixed;
+    width: 100%;
+    height: 100vh;
+    background-color: rgba(0, 0, 0, 0.5);
+    z-index: 400;
+    top: 0px;
+}
+
+.headmodal{
+    display: flex;
+    justify-content: end;
+}
+.btnclosemodal{
+    display: block;
+    background-color: #00457E;
+    padding: 10px;
+    border-radius: 10px;
+    cursor: pointer;
+    color: white;
+    text-transform: uppercase;
+}
+.btnclosemodal:hover{
+    opacity: 0.8;
+}
+.iconclosemodal{
+    margin: -5px;
+}
+.bodymodal{}
+.textmodal{
+    color: #00457E;
+    font-size: 1.5em;
+    text-align: center;
+    text-shadow: 1px 1px 2px gray  ;
+}
+#contactForm{
+    display: flex;
+    flex-direction: column;
+    gap: 20px;
+}
+.form-group{
+    display: flex;
+    flex-direction: column;
+    gap: 10px;
+    color: #00457E;
+}
+.footermodal{
+    display: flex;
+    justify-content: center;
+    gap: 20px;
+}
+
+.form-group input{
+    padding: 15px;
+    border-radius: 15px;
+    outline: none;
+    border: 1px solid #00457E;
+    text-align: center;
+}
+.submitbtn{
+    display: block;
+    background-color: #F7F7F7;
+    padding: 10px;
+    border-radius: 10px;
+    border: 1px solid #00457E;
+    cursor: pointer;
+    color: #00457E;
+    text-transform: uppercase;
+}
+.submitbtn:hover{
+    background-color: #00457e17;
 }
 
